# fstest

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/: basic.rs
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
fstest_macro/: Cargo.toml
fstest_macro/src/: lib.rs
src/: lib.rs
