[package]
name = "fstest"
description = "A procedural macro for testing in tempdirs or git repos"
license = "MIT OR Apache-2.0"
authors = ["Jens Krumsieck"]
keywords = ["test", "proc_macro"]
categories = ["testing"]
version = "0.1.0"
edition = "2024"

[dependencies]
fstest_macro = { path = "fstest_macro" }
tempfile = "3.19.1"
git2 = "0.20.1"

[[example]]
name = "basic"
path = "examples/basic.rs"
