[package]
name = "fstest"
description = "A procedural macro for testing in tempdirs or git repos"
license = "MIT OR Apache-2.0"
authors = ["Jens Krumsieck"]
keywords = ["test", "proc_macro"]
categories = ["development-tools::testing"]
version = "0.2.4"
edition = "2024"
repository = "https://github.com/jenskrumsieck/fstest"

[dependencies]
fstest_macro = { version = "0.2.4", path = "fstest_macro" }
tempfile = "3"
serial_test = "3"
git2 = "0.20"

[[example]]
name = "basic"
path = "examples/basic.rs"

[workspace]
members = ["fstest_macro", "."]
